--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 .main {
-    background-image: url("/img/1.jpg");
+    background-image: url("1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
